# rc-pos-area

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  LICENSE  PACKAGE_STRUCTURE.md  README.md  pyproject.toml  setup.py
docs/: CHANNEL_INDEXING_FIX.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICKREF.md  QUICKSTART.md  TISSUE_REGION_FEATURE.md
pixi/: pixi.toml
src/image_analysis_tool/: __init__.py  cli.py  report.py
src/rc_pos_area/: __init__.py  cli.py  gui.py  processor.py  report.py
