[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-pos-area"
dynamic = ["version"]
description = "CLI tool for computing and summarizing positive area in a multi-channel WSI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yu-An Chen", email = "atwood12@gmail.com" }]
keywords = ["microscopy", "image-analysis", "biomedical", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "dask-image>=2023.0.0",
    "palom>=2023.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
pos-area = "rc_pos_area.cli:main"

[project.urls]
Homepage = "https://github.com/yu-anchen/rc-pos-area"
Repository = "https://github.com/yu-anchen/rc-pos-area"
Documentation = "https://github.com/yu-anchen/rc-pos-area#readme"

[tool.setuptools_scm]